Fix spacing Fix header keyline

--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -36,6 +36,7 @@ $govuk-canvas-background-colour: $govuk-body-background-colour;
 .header-background {
   background-color: #f7f7f7;
   padding: 20px 10px 0 10px;
+  border-bottom: 1px solid #b1b4b6;
 
 
 }
@@ -65,6 +66,7 @@ $govuk-canvas-background-colour: $govuk-body-background-colour;
 
 .govuk-phase-banner {
   margin-bottom: 40px;
+  border-bottom: 0;
 }
 
 .moj-search {
